# build-mpq

./: .gitignore  README.md  SYMLINKS.md  main.py  pyproject.toml
.github/workflows/: publish-pypi-test.yaml  publish-pypi.yaml  test.yaml
build_mpq/: __init__.py  cli.py  operations.py  structure.py
docs/: CATEGORIES.md  IMPLEMENTATION.md  QUICKSTART.md  demo_symlinks.py  example.py
tests/: __init__.py  test_cli.py  test_operations.py  test_structure.py
