[project]
name = "build-mpq"
version = "0.1.0"
description = "CLI tool for building and validating WoW 3.3.5a client patch MPQ files"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
build-mpq = "build_mpq.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
